{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 33,
  "lineage": "903c86cf-dd81-02a0-f6fa-dd6fd9c4599c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-03a7d13d4db92623b",
            "id": "rtb-03a7d13d4db92623b",
            "owner_id": "332664274229",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0704faf23fe237a52",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-private-route-table"
            },
            "vpc_id": "vpc-0750170e59f9a716e"
          },
          "dependencies": [
            "aws_eip.my-test-eip",
            "aws_nat_gateway.my-test-nat-gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my-test-eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-9253865f",
            "domain": "vpc",
            "id": "eipalloc-01bdada2d77da5624",
            "network_interface": "eni-007c3f2d4d28ba67d",
            "private_dns": "ip-10-0-1-171.eu-west-2.compute.internal",
            "private_ip": "10.0.1.171",
            "public_dns": "ec2-18-130-45-110.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.45.110",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-087d79637d96915c9",
            "owner_id": "332664274229",
            "tags": {
              "Name": "my-test-igw"
            },
            "vpc_id": "vpc-0750170e59f9a716e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my-test-nat-gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01bdada2d77da5624",
            "id": "nat-0704faf23fe237a52",
            "network_interface_id": "eni-007c3f2d4d28ba67d",
            "private_ip": "10.0.1.171",
            "public_ip": "18.130.45.110",
            "subnet_id": "subnet-0d5c9ab81ae970a32"
          },
          "dependencies": [
            "aws_eip.my-test-eip",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0517cc392a0573280",
            "owner_id": "332664274229",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-087d79637d96915c9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-test-public-route"
            },
            "vpc_id": "vpc-0750170e59f9a716e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb2d01d3eda112fb",
            "route_table_id": "rtb-03a7d13d4db92623b",
            "subnet_id": "subnet-0cfbdf7ef38ba4864"
          },
          "dependencies": [
            "aws_default_route_table.private_route",
            "aws_eip.my-test-eip",
            "aws_nat_gateway.my-test-nat-gateway",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c009848393f06ce",
            "route_table_id": "rtb-03a7d13d4db92623b",
            "subnet_id": "subnet-0a93475936277d08b"
          },
          "dependencies": [
            "aws_default_route_table.private_route",
            "aws_eip.my-test-eip",
            "aws_nat_gateway.my-test-nat-gateway",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0115b4a34003ad094",
            "route_table_id": "rtb-0517cc392a0573280",
            "subnet_id": "subnet-0d5c9ab81ae970a32"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00281868f2373123b",
            "route_table_id": "rtb-0517cc392a0573280",
            "subnet_id": "subnet-09c987c431b70babe"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:332664274229:security-group/sg-0c6e857f42088080b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c6e857f42088080b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-test-sg",
            "name_prefix": null,
            "owner_id": "332664274229",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0750170e59f9a716e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_outbound_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1895281495",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c6e857f42088080b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.test_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_inbound_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1157112503",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c6e857f42088080b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.test_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_inbound_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-4067589890",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c6e857f42088080b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.test_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:332664274229:subnet/subnet-0cfbdf7ef38ba4864",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0cfbdf7ef38ba4864",
            "map_public_ip_on_launch": false,
            "owner_id": "332664274229",
            "tags": {
              "Name": "my-test-private-subnet.1"
            },
            "vpc_id": "vpc-0750170e59f9a716e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:332664274229:subnet/subnet-0a93475936277d08b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0a93475936277d08b",
            "map_public_ip_on_launch": false,
            "owner_id": "332664274229",
            "tags": {
              "Name": "my-test-private-subnet.2"
            },
            "vpc_id": "vpc-0750170e59f9a716e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:332664274229:subnet/subnet-0d5c9ab81ae970a32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d5c9ab81ae970a32",
            "map_public_ip_on_launch": true,
            "owner_id": "332664274229",
            "tags": {
              "Name": "my-test-public-subnet.1"
            },
            "vpc_id": "vpc-0750170e59f9a716e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:332664274229:subnet/subnet-09c987c431b70babe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-09c987c431b70babe",
            "map_public_ip_on_launch": true,
            "owner_id": "332664274229",
            "tags": {
              "Name": "my-test-public-subnet.2"
            },
            "vpc_id": "vpc-0750170e59f9a716e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:332664274229:vpc/vpc-0750170e59f9a716e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05042abe55c28d317",
            "default_route_table_id": "rtb-03a7d13d4db92623b",
            "default_security_group_id": "sg-0f6513f70e7f8f013",
            "dhcp_options_id": "dopt-d5d3a7bd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0750170e59f9a716e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03a7d13d4db92623b",
            "owner_id": "332664274229",
            "tags": {
              "Name": "my-new-test-terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}